# td_toolkit

./: .gitignore  config.py
etl/: .gitignore  etl_procedure.py  page_and_screen_etl.py
etl/from_wp_ga4_to_report/: __init__.py  config.py  (+4 more)
ga4_api/: __init__.py  ga4_api.py
gemini/: __init__.py  pyproject.toml
gemini/gemini/: __init__.py  gemini_client.py
monthly/: Report luglio.txt
notebooks/: eda_headline_analysis.ipynb  eda_report_spring.ipynb  nlp_tfidf_headline_analysis.ipynb
postgresql_server/: .gitignore  alembic.ini  api.py  api_utils.py  compose.yml  engine.py  get_data.py  init.sql  logging_utils.py  orm_utils.py  session_utils.py
reports/: gemini_toolkit.py  map_ga4_categories.py  report_etl.py
scrape_content/: ArticleScraper.py  scrape_archive.py  scrape_articles.py
seo/: seo_report.py
td_data_toolkit/: .gitignore  __init__.py  pyproject.toml
td_data_toolkit/docs/source/: conf.py  index.rst
td_data_toolkit/docs/source/barplot/: barplot.rst
td_data_toolkit/src/td_data_toolkit/: hello.py
td_data_toolkit/src/td_data_toolkit/article_analytics/: metadata.py
td_data_toolkit/src/td_data_toolkit/data_transformation/: __init__.py  datetime_ops.py  pivot.py
td_data_toolkit/src/td_data_toolkit/data_visualization/: barplot.py
td_data_toolkit/src/td_data_toolkit/ga4_toolkit/: __init__.py  properties_toolkit.py
td_data_toolkit/src/td_data_toolkit/page_analytics/: __init__.py  page_analytics.py
td_data_toolkit/src/td_data_toolkit/td_db_clients/: ArticleClient.py  __init__.py
td_data_toolkit/src/td_data_toolkit/utils/: xml_utils.py
td_data_toolkit/transformations/: __init__.py
(+38 files in other folders)
