# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#urls

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "td_data_toolkit"
authors = [
    {name = "Manuel De Luzi", email = "manueldeluzi@gmail.com"},
]
version = "0.0.1"
description = "A toolkit for doing analytics."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pandas>=2.2",
    "numpy==2.0",
    "matplotlib==3.10",
    "seaborn>=0.13.2",
    "requests",
    "sqlalchemy"
]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3"]
notebook = [
    "notebook>=6.0",
    "jupyterlab>=3.0",
    "nbconvert>=6.0",
    "nbformat>=5.0",
    "ipykernel>=6.0",
    "ipywidgets>=7.0"
]
docs = [
    "sphinx"
]

[project.scripts]
# Insert commands user can use from CLI here that'll call python functions 
# from some modules
hellotd = "td_data_toolkit.hello:hello_taxidrivers"





